--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1,31 +1,64 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Classification\n",
-    "\n",
-    "Notebook for classification tasks\n",
-    "\n",
-    "Plan:\n",
-    "- Load data\n",
-    "- Train/test split\n",
-    "- Baseline model (Logistic Regression)\n",
-    "- Metrics: accuracy, precision, recall, F1, ROC-AUC\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Vjk59lf5xKq"
+      },
+      "source": [
+        "# Classification\n",
+        "\n",
+        "Notebook for classification tasks\n",
+        "\n",
+        "Plan:\n",
+        "- Load data\n",
+        "- Train/test split\n",
+        "- Baseline model (Logistic Regression)\n",
+        "- Metrics: accuracy, precision, recall, F1, ROC-AUC\n"
+      ],
+      "id": "9Vjk59lf5xKq"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Я начинаю проект: подключаю базовые библиотеки\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "from sklearn.metrics import (\n",
+        "    roc_auc_score,\n",
+        "    precision_score, recall_score, f1_score,\n",
+        "    confusion_matrix, ConfusionMatrixDisplay,\n",
+        "    RocCurveDisplay, PrecisionRecallDisplay\n",
+        ")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fEQ-U1xo51jw"
+      },
+      "id": "fEQ-U1xo51jw",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
